--- a/app/views/games/_roundresultsshort.html.erb
+++ b/app/views/games/_roundresultsshort.html.erb
@@ -97,9 +97,11 @@
               <% end %>
             </td>
             <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r1answer) %>"
-              <% if (@round1winner.id) && @round1winner.id == current_user.id && @round1winner.id == answer.user_id %>
-                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r1letters %>: "<%= @currentusergamedata.r1answer %>" (<%= @currentusergame.r1cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+              <% if @round1winner %>
+                <% if @round1winner.id == current_user.id && @round1winner.id == answer.user_id %>
+                  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r1letters %>: "<%= @currentusergamedata.r1answer %>" (<%= @currentusergame.r1cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
 
+                <% end %>
               <% end %>
             </td>
             <td><%= answer.r1points %></td>
@@ -167,9 +169,11 @@
               <% end %>
             </td>
             <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r2answer) %>"
-              <% if (@round2winner.id) && @round2winner.id == current_user.id && @round2winner.id == answer.user_id %>
-                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r2letters %>: "<%= @currentusergamedata.r2answer %>" (<%= @currentusergame.r2cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+              <% if @round2winner %>
+                <% if @round2winner.id == current_user.id && @round2winner.id == answer.user_id %>
+                  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r2letters %>: "<%= @currentusergamedata.r2answer %>" (<%= @currentusergame.r2cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
 
+                <% end %>
               <% end %>
             </td>
             <td><%= answer.r2points %></td>
@@ -237,9 +241,11 @@
               <% end %>
             </td>
             <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r3answer) %>"
-              <% if (@round3winner.id) && @round3winner.id == current_user.id && @round3winner.id == answer.user_id %>
-                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r3letters %>: "<%= @currentusergamedata.r3answer %>" (<%= @currentusergame.r3cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+              <% if @round3winner %>
+                <% if @round3winner.id == current_user.id && @round3winner.id == answer.user_id %>
+                  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r3letters %>: "<%= @currentusergamedata.r3answer %>" (<%= @currentusergame.r3cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
 
+                <% end %>
               <% end %>
             </td>
             <td><%= answer.r3points %></td>
@@ -307,9 +313,11 @@
               <% end %>
             </td>
             <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r4answer) %>"
-              <% if (@round4winner.id) && @round4winner.id == current_user.id && @round4winner.id == answer.user_id %>
-                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r4letters %>: "<%= @currentusergamedata.r4answer %>" (<%= @currentusergame.r4cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+              <% if @round4winner %>
+                <% if @round4winner.id == current_user.id && @round4winner.id == answer.user_id %>
+                  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r4letters %>: "<%= @currentusergamedata.r4answer %>" (<%= @currentusergame.r4cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
 
+                <% end %>
               <% end %>
             </td>
             <td><%= answer.r4points %></td>
@@ -319,6 +327,7 @@
     </table>
     <span class="novotefrown"><%= image_tag("emoji/anguished.png") %></span> = non-voter
   </div>
+
 </div>
 <div class="chatbutton">
       <% if Gamedata.where(:game_id => @game.id).where(:user_id => current_user.id).first.whochatted != "" %>
