--- a/app/views/games/_roundresultslong.html.erb
+++ b/app/views/games/_roundresultslong.html.erb
@@ -109,9 +109,11 @@
               <% end %>
             </td>
             <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r1answer) %>"
-              <% if (@round1winner.id) && @round1winner.id == current_user.id && @round1winner.id == answer.user_id %>
-                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r1letters %>: "<%= @currentusergamedata.r1answer %>" (<%= @currentusergame.r1cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+              <% if @round1winner %>
+                <% if @round1winner.id == current_user.id && @round1winner.id == answer.user_id %>
+                  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r1letters %>: "<%= @currentusergamedata.r1answer %>" (<%= @currentusergame.r1cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
 
+                <% end %>
               <% end %>
             </td>
             <td><%= answer.r1points %></td>
@@ -179,9 +181,11 @@
               <% end %>
             </td>
             <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r2answer) %>"
-              <% if (@round2winner.id) && @round2winner.id == current_user.id && @round2winner.id == answer.user_id %>
-                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r2letters %>: "<%= @currentusergamedata.r2answer %>" (<%= @currentusergame.r2cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+              <% if @round2winner %>
+                <% if @round2winner.id == current_user.id && @round2winner.id == answer.user_id %>
+                  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r2letters %>: "<%= @currentusergamedata.r2answer %>" (<%= @currentusergame.r2cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
 
+                <% end %>
               <% end %>
             </td>
             <td><%= answer.r2points %></td>
@@ -249,9 +253,11 @@
               <% end %>
             </td>
             <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r3answer) %>"
-              <% if (@round3winner.id) && @round3winner.id == current_user.id && @round3winner.id == answer.user_id %>
-                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r3letters %>: "<%= @currentusergamedata.r3answer %>" (<%= @currentusergame.r3cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+              <% if @round3winner %>
+                <% if @round3winner.id == current_user.id && @round3winner.id == answer.user_id %>
+                  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r3letters %>: "<%= @currentusergamedata.r3answer %>" (<%= @currentusergame.r3cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
 
+                <% end %>
               <% end %>
             </td>
             <td><%= answer.r3points %></td>
@@ -319,9 +325,11 @@
               <% end %>
             </td>
             <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r4answer) %>"
-              <% if (@round4winner.id) && @round4winner.id == current_user.id && @round4winner.id == answer.user_id %>
-                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r4letters %>: "<%= @currentusergamedata.r4answer %>" (<%= @currentusergame.r4cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+              <% if @round4winner %>
+                <% if @round4winner.id == current_user.id && @round4winner.id == answer.user_id %>
+                  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r4letters %>: "<%= @currentusergamedata.r4answer %>" (<%= @currentusergame.r4cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
 
+                <% end %>
               <% end %>
             </td>
             <td><%= answer.r4points %></td>
@@ -389,9 +397,11 @@
               <% end %>
             </td>
             <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r5answer) %>"
-              <% if (@round5winner.id) && @round5winner.id == current_user.id && @round5winner.id == answer.user_id %>
-                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r5letters %>: "<%= @currentusergamedata.r5answer %>" (<%= @currentusergame.r5cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+              <% if @round5winner %>
+                <% if @round5winner.id == current_user.id && @round5winner.id == answer.user_id %>
+                  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r5letters %>: "<%= @currentusergamedata.r5answer %>" (<%= @currentusergame.r5cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
 
+                <% end %>
               <% end %>
             </td>
             <td><%= answer.r5points %></td>
@@ -459,9 +469,11 @@
               <% end %>
             </td>
             <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r6answer) %>"
-              <% if (@round6winner.id) && @round6winner.id == current_user.id && @round6winner.id == answer.user_id %>
-                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r6letters %>: "<%= @currentusergamedata.r6answer %>" (<%= @currentusergame.r6cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+              <% if @round6winner %>
+                <% if @round6winner.id == current_user.id && @round6winner.id == answer.user_id %>
+                  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r6letters %>: "<%= @currentusergamedata.r6answer %>" (<%= @currentusergame.r6cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
 
+                <% end %>
               <% end %>
             </td>
             <td><%= answer.r6points %></td>
@@ -529,8 +541,10 @@
               <% end %>
             </td>
             <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r7answer) %>"
-              <% if (@round7winner.id) && @round7winner.id == current_user.id && @round7winner.id == answer.user_id %>
-                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r7letters %>: "<%= @currentusergamedata.r7answer %>" (<%= @currentusergame.r7cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+              <% if @round7winner %>
+                <% if @round7winner.id == current_user.id && @round7winner.id == answer.user_id %>
+                  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r7letters %>: "<%= @currentusergamedata.r7answer %>" (<%= @currentusergame.r7cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+                <% end %>
               <% end %>
             </td>
             <td><%= answer.r7points %></td>
@@ -598,8 +612,10 @@
               <% end %>
             </td>
             <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r8answer) %>"
-              <% if (@round8winner.id) && @round8winner.id == current_user.id && @round8winner.id == answer.user_id %>
-                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r8letters %>: "<%= @currentusergamedata.r8answer %>" (<%= @currentusergame.r8cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+              <% if @round8winner %>
+                <% if @round8winner.id == current_user.id && @round8winner.id == answer.user_id %>
+                  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r8letters %>: "<%= @currentusergamedata.r8answer %>" (<%= @currentusergame.r8cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+                <% end %>
               <% end %>
             </td>
             <td><%= answer.r8points %></td>
