--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -16,6 +16,10 @@
 
   <div class="fb-like" data-href="https://www.facebook.com/acrofriends" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div><br><br>
 
+  <div id="linktohowtoplay">
+    <%= link_to('How to Play and Scoring Rules', howtoplay_pages_path) %>
+  </div>
+
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
     <%= devise_error_messages! %>
 
