--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -6,9 +6,11 @@
   <% if @game.length == "1hour" %>
     <%= render "roundplayshort" %>
     <%= render "shared/gamead" %>
+    <span style="display: block; text-align: center;"><%= link_to('How to Play/Scoring', howtoplay_pages_path) %></span>
   <% elsif @game.length == "6hour" %>
     <%= render "roundplaylong" %>
     <%= render "shared/gamead" %>
+    <span style="display: block; text-align: center;"><%= link_to('How to Play/Scoring', howtoplay_pages_path) %></span>
   <% end %>
 <% end %>
 
@@ -19,8 +21,10 @@
   <% else %>
     <% if @game.length == "1hour" %>
       <%= render "roundvoteshort" %>
+      <span style="display: block; text-align: center;"><%= link_to('How to Play/Scoring', howtoplay_pages_path) %></span>
     <% elsif @game.length == "6hour" %>
       <%= render "roundvotelong" %>
+      <span style="display: block; text-align: center;"><%= link_to('How to Play/Scoring', howtoplay_pages_path) %></span>
     <% end %>
   <% end %>
 <% end %>
@@ -33,8 +37,10 @@
     <!-- results code here -->
     <% if @game.length == "1hour" %>
       <%= render "roundresultsshort" %>
+      <span style="display: block; text-align: center;"><%= link_to('How to Play/Scoring', howtoplay_pages_path) %></span>
     <% elsif @game.length == "6hour" %>
       <%= render "roundresultslong" %>
+      <span style="display: block; text-align: center;"><%= link_to('How to Play/Scoring', howtoplay_pages_path) %></span>
     <% end %>
   <% end %>
   <!--- tweet code ---->
