--- a/app/views/games/_roundresultslong.html.erb
+++ b/app/views/games/_roundresultslong.html.erb
@@ -97,7 +97,11 @@
                   +1
                 <% end %>
               <% elsif @round1winner.id == User.where(:id => answer.user_id).first.id %>
-                +3
+                <% if Gamedata.where(:game_id => @game.id).where.not(:r1votedfor => 0).count == 1 %>
+                  +1
+                <% else %>
+                  +3
+                <% end %>
               <% end %>
             </td>
             <td>
@@ -169,7 +173,11 @@
                   +1
                 <% end %>
               <% elsif @round2winner.id == User.where(:id => answer.user_id).first.id %>
-                +4
+                <% if Gamedata.where(:game_id => @game.id).where.not(:r2votedfor => 0).count == 1 %>
+                  +1
+                <% else %>
+                  +4
+                <% end %>
               <% end %>
             </td>
             <td>
@@ -241,7 +249,11 @@
                   +2
                 <% end %>
               <% elsif @round3winner.id == User.where(:id => answer.user_id).first.id %>
-                +5
+                <% if Gamedata.where(:game_id => @game.id).where.not(:r3votedfor => 0).count == 1 %>
+                  +2
+                <% else %>
+                  +5
+                <% end %>
               <% end %>
             </td>
             <td>
@@ -313,7 +325,11 @@
                   +2
                 <% end %>
               <% elsif @round4winner.id == User.where(:id => answer.user_id).first.id %>
-                +6
+                <% if Gamedata.where(:game_id => @game.id).where.not(:r4votedfor => 0).count == 1 %>
+                  +2
+                <% else %>
+                  +6
+                <% end %>
               <% end %>
             </td>
             <td>
@@ -385,7 +401,11 @@
                   +1
                 <% end %>
               <% elsif @round5winner.id == User.where(:id => answer.user_id).first.id %>
-                +3
+                <% if Gamedata.where(:game_id => @game.id).where.not(:r5votedfor => 0).count == 1 %>
+                  +1
+                <% else %>
+                  +3
+                <% end %>
               <% end %>
             </td>
             <td>
@@ -457,7 +477,11 @@
                   +1
                 <% end %>
               <% elsif @round6winner.id == User.where(:id => answer.user_id).first.id %>
-                +4
+                <% if Gamedata.where(:game_id => @game.id).where.not(:r6votedfor => 0).count == 1 %>
+                  +1
+                <% else %>
+                  +4
+                <% end %>
               <% end %>
             </td>
             <td>
@@ -529,7 +553,11 @@
                   +2
                 <% end %>
               <% elsif @round7winner.id == User.where(:id => answer.user_id).first.id %>
-                +5
+                <% if Gamedata.where(:game_id => @game.id).where.not(:r7votedfor => 0).count == 1 %>
+                  +2
+                <% else %>
+                  +5
+                <% end %>
               <% end %>
             </td>
             <td>
@@ -600,7 +628,11 @@
                   +2
                 <% end %>
               <% elsif @round8winner.id == User.where(:id => answer.user_id).first.id %>
-                +6
+                <% if Gamedata.where(:game_id => @game.id).where.not(:r8votedfor => 0).count == 1 %>
+                  +2
+                <% else %>
+                  +6
+                <% end %>
               <% end %>
             </td>
             <td>
