lightning mode begin

--- a/app/views/shared/_bottombar.html.erb
+++ b/app/views/shared/_bottombar.html.erb
@@ -1,6 +1,7 @@
 <div id="main-bottombar">
   <div id="main-icons">
     <%= link_to(image_tag("New-128.png", size: "48", alt: "Start New Game", class: "main-icon"), new_game_path) %>
+    <%= link_to(image_tag("Lightning-128.png", size: "48", alt: "Lightning Mode", class: "main-icon"), lightnings_path) %>
     <!-- <%= link_to(image_tag("User-Group-128.png", size: "48", alt: "Join or Start Group", class: "main-icon"), groups_path) %> -->
     <%= link_to(image_tag("Graph-03-128.png", size: "48", alt: "Ratings and Stats", class: "main-icon"),
         rankings_pages_path) %>
