--- a/app/views/lightnings/show.html.erb
+++ b/app/views/lightnings/show.html.erb
@@ -11,3 +11,6 @@
   <% end %>
 <% end %>
 <%= render "shared/bottombar" %>
+
+<%= javascript_include_tag "page/playgame" %>
+<%= javascript_include_tag "page/validation" %>
