lightning voting started

--- a/app/views/lightnings/index.html.erb
+++ b/app/views/lightnings/index.html.erb
@@ -10,7 +10,11 @@
       </div>
     <% end %>
   <% else %>
-
+    <%= link_to(lightningvote_lightnings_path) do %>
+      <div class="button">
+        Start Quick Play
+      </div>
+    <% end %>
   <% end %>
 </div>
 
