--- a/app/assets/stylesheets/size-largest.css
+++ b/app/assets/stylesheets/size-largest.css
@@ -524,4 +524,20 @@
     border-radius: 3px 3px;
     padding: 8px;
   }
+  .lightninggameletters {
+    font-size: 130%;
+    font-weight: 700;
+    color: red;
+  }
+  .lightninggamecategories {
+    font-style: italic;
+    font-size: 130%;
+    font-weight: 500;
+    color: red;
+  }
+  .lightninganswer {
+    font-size: 145%;
+    font-weight: 500;
+    color: black;
+  }
 }
