--- a/app/views/lightnings/vote.html.erb
+++ b/app/views/lightnings/vote.html.erb
@@ -2,9 +2,16 @@
 <%= render "shared/topbar" %>
 
 <div id="voterounds" class="votearea">
-  <div class="roundtitle">Lightning Vote</div>
+  <div class="roundtitle">Lightning Vote</div><br>
   <% @lightning.shuffle.first(3).each do |lightning| %>
-    <%= lightning.answer %><br>
+    <span class="lightninggameletters"><%= lightning.letters %></span><span class="lightninggamecategories"> - <%= lightning.category %></span><br>
+    <span class="lightninganswer">"<%= lightning.answer %>"</span><br>
+    <%= image_tag("Thumbs-Up-128.png", size: "48", alt: "Heart", class: "main-icon") %>
+    <%= image_tag("Thumbs-Down-128.png", size: "48", alt: "Heart", class: "main-icon") %>
+    <%= image_tag("Heart-128.png", size: "48", alt: "Heart", class: "main-icon") %><br>
+    <hr></hr>
+    <br>
+
   <% end %>
 </div>
 
