--- a/app/assets/stylesheets/size-smallest.css
+++ b/app/assets/stylesheets/size-smallest.css
@@ -554,4 +554,10 @@
   .lightvote-icon {
     margin: 0 10px;
   }
+  .lightvote-icon:hover {
+    background-color: #c1f5fe;
+  }
+  .lightningvotedesc {
+    font-size: 90%;
+  }
 }
