--- a/app/assets/stylesheets/size-largest.css
+++ b/app/assets/stylesheets/size-largest.css
@@ -552,5 +552,9 @@
   .disabled {
     pointer-events: none;
   }
-
+  .disabledtoplay {
+    background-color: gray !important;
+    pointer-events: none;
+    opacity: .6;
+  }
 }
