lightning mode nav done

--- a/app/assets/javascripts/page/lightningvote.js.erb
+++ b/app/assets/javascripts/page/lightningvote.js.erb
@@ -94,4 +94,13 @@ else {
   })
 }
 
+$("#lightningvotetoplay").click(function() {
+  $.ajax({
+          url: "/lightnings/switchplayvote",
+          type: "POST",
+          data: {playvote: 'play'},
+          dataType: 'script'
+        });
+});
+
 
