--- a/app/views/lightnings/index.html.erb
+++ b/app/views/lightnings/index.html.erb
@@ -6,13 +6,13 @@
     <%= form_for(@lightning) do |f| %>
       <%= f.hidden_field :user_id, :value => current_user.id %>
       <div class="actions">
-        <%= f.submit "Start Quick Play", :class => "button" %>
+        <%= f.submit "Play Lightning Mode", :class => "button" %>
       </div>
     <% end %>
   <% else %>
     <%= link_to(lightningvote_lightnings_path) do %>
       <div class="button">
-        Start Quick Play
+        Play Lightning Mode
       </div>
     <% end %>
   <% end %>
