lightning stats start

--- a/app/assets/stylesheets/size-largest.css
+++ b/app/assets/stylesheets/size-largest.css
@@ -229,6 +229,9 @@
     margin-top: 80px;
     text-align:center;
   }
+  #newgamepage a {
+    text-decoration: none;
+  }
   #playrounds {
     width: 60%;
     margin: 0 auto;
