--- a/app/views/lightnings/show.html.erb
+++ b/app/views/lightnings/show.html.erb
@@ -1,7 +1,11 @@
 <% @mainpagetitle = "Lightning Mode" %>
 <%= render "shared/topbar" %>
 
-<%= render "roundplay" %>
+<% if @lightning.completed == false %>
+  <%= render "roundplay" %>
+<% else %>
+  <%= render "roundresults" %>
+<% end %>
 
 <%= render "shared/bottombar" %>
 
