--- a/app/views/lightnings/_roundplay.html.erb
+++ b/app/views/lightnings/_roundplay.html.erb
@@ -23,8 +23,8 @@
       </div>
       <br>
       <%= link_to(lightningvote_lightnings_path) do %>
-        <div class="button" id="lightningtovoteround">
-          Continue to Vote Round
+        <div class="button disabledtoplay" id="lightningtovoteround">
+          Play to continue...
         </div>
       <% end %>
       <script>
