--- a/app/views/lightnings/_roundresults.html.erb
+++ b/app/views/lightnings/_roundresults.html.erb
@@ -10,7 +10,7 @@
         <%= image_tag("Heart-128-red.png", size: "64", alt: "Heart", class: "lightresult-icon") %>
         <span class="graphicresultstext"><%= @lightning.hearts %></span>
       </div>
-      <div class="lightningresultletters"><%= @lightning.letters %></div>
+      Letters: <span class="lightningresultletters"><%= @lightning.letters %></span><br>
       Category: <span class="gamecategories"><%= @lightning.category %></span>
       <div class="lightningresultanswer">"<%= @lightning.answer %>"</div>
       <br>
