--- a/app/views/lightnings/index.html.erb
+++ b/app/views/lightnings/index.html.erb
@@ -23,12 +23,19 @@
       <span class="completedgamelink">
         <%= link_to(game) do %>
 
-          <div class="button">
+          <div class="lightningindexbutton">
 
-            <span class="gamelistname"><%= game.category %><br>
+            <span class="lightninglistcategory"><%= game.category %>:
             </span>
-            "<%= game.answer %>"
-
+            <span class="lightninglistanswer">"<%= game.answer %>"</span>
+            <div class="lightninglistdata">
+              <%= image_tag("Thumbs-Up-128-Blue.png", size: "22", alt: "Thumbs Up", class: "lightindexresult-icon") %>
+              <span class="lightningindexdata"><%= @lightning.thumbsup %></span>
+              <%= image_tag("Thumbs-Down-128-Blue.png", size: "22", alt: "Thumbs Down", class: "lightindexresult-icon") %>
+              <span class="lightningindexdata"><%= @lightning.thumbsdown %></span>
+              <%= image_tag("Heart-128-red.png", size: "22", alt: "Heart", class: "lightindexresult-icon") %>
+              <span class="lightningindexdata"><%= @lightning.hearts %></span>
+            </div>
           </div>
         <% end %></span>
       <br>
